--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,18 @@
-include ':app'
-rootProject.name = "VRMinecraft" 
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "VR Minecraft"
+include ':app' 
